[gd_scene load_steps=2 format=2]

[ext_resource path="res://SceneComponent/Display/3DViewportSlide.gd" type="Script" id=1]

[node name="Slide1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.875, 1.54286 )
color = Color( 0.25708, 0.33283, 0.40625, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="ColorRect"]
margin_left = 56.0
margin_top = 13.0
margin_right = 903.0
margin_bottom = 433.0
stretch = true

[node name="Viewport" type="Viewport" parent="ColorRect/ViewportContainer"]
size = Vector2( 847, 420 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Content" type="Control" parent="ColorRect"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Text0" type="RichTextLabel" parent="ColorRect/Content"]
margin_left = 32.0
margin_top = 451.0
margin_right = 483.0
margin_bottom = 524.0
rect_scale = Vector2( 2, 2 )
text = "Now you can see whole rocket!"

[node name="Text1" type="RichTextLabel" parent="ColorRect/Content"]
visible = false
margin_left = 259.832
margin_top = 454.948
margin_right = 396.832
margin_bottom = 503.948
rect_scale = Vector2( 3, 3 )
text = "Nozzle Animation!"

[node name="Text2" type="RichTextLabel" parent="ColorRect/Content"]
visible = false
margin_left = 335.505
margin_top = 449.0
margin_right = 512.505
margin_bottom = 513.0
rect_scale = Vector2( 3, 3 )
text = "and the blades (if you can see them)!"

[node name="Text3" type="RichTextLabel" parent="ColorRect/Content"]
visible = false
margin_left = 349.351
margin_top = 456.819
margin_right = 466.351
margin_bottom = 501.819
rect_scale = Vector2( 3, 3 )
text = "Finally - the inlet!"

[node name="Buttons" type="Control" parent="ColorRect"]
margin_right = 40.0
margin_bottom = 40.0

[node name="NextButton" type="Button" parent="ColorRect/Buttons"]
margin_left = 722.285
margin_top = 519.577
margin_right = 764.285
margin_bottom = 539.577
rect_scale = Vector2( 4, 4 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevButton" type="Button" parent="ColorRect/Buttons"]
visible = false
margin_left = 55.6548
margin_top = 515.472
margin_right = 122.655
margin_bottom = 535.472
rect_scale = Vector2( 4, 4 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Previous"
[connection signal="button_up" from="ColorRect/Buttons/NextButton" to="." method="next_button_clicked"]
[connection signal="button_up" from="ColorRect/Buttons/PrevButton" to="." method="prev_button_clicked"]
